crates/icydb-core/tests/ui/db/executor/kernel_module_private.rs
use icydb_core::db::executor::kernel::ExecutionKernel;

fn main() {}
